Export Java CFG variable usage for RAG
Adds Java expression-derived variablesRead and variablesModified to CFG nodes and paragraph aggregates, and updates Python paragraph enrichment to prefer those Java facts over text heuristics.